# gam

./: .gitignore  .travis.yml  CMakeLists.txt
cmake/: FindLibfabric.cmake
examples/denoiser/: Makefile  cuda_denoiser.cu  defs.hpp  farm_components.hpp  seq_denoiser.cpp  seq_detect.hpp  video_filter.hpp  video_source.hpp  video_writer.hpp
examples/stock-market/: Makefile  config.hpp  defs.hpp  farm_components.hpp  option_filter.hpp  option_source.hpp  price_writer.hpp  stock_market.cpp
gam/include/: Cache.hpp  ConcurrentMapWrap.hpp  Context.hpp  GlobalPointer.hpp  Links.hpp  Logger.hpp  MemoryController.hpp  TrackingAllocator.hpp  View.hpp  backend_ptr.hpp  defs.hpp  gam.hpp  gam_unique_ptr.hpp  links_stub.hpp  private_ptr.hpp  public_ptr.hpp  utils.hpp  wrapped_allocator.hpp
gam/include/dff2/: CommunicatorInternals.hpp  Filter.hpp  Logger.hpp  Network.hpp  Node.hpp  Profiler.hpp  Sink.hpp  Source.hpp  defs.hpp  dff2.hpp  utils.hpp
gam/include/dff2/communicators/: builtin.hpp
gam/include/dff2/dispatcher_faimiles/: builtin.hpp
gam/include/dff2/dispatching_policies/: builtin.hpp
gam/include/links_implementations/: fl_common.hpp  fl_connectionless.hpp
include/: gam.hpp
include/gam/: Cache.hpp  ConcurrentMapWrap.hpp  Context.hpp  GlobalPointer.hpp  Logger.hpp  MemoryController.hpp  TrackingAllocator.hpp  View.hpp  backend_ptr.hpp  defs.hpp  gam_unique_ptr.hpp  links_stub.hpp  private_ptr.hpp  public_ptr.hpp  wrapped_allocator.hpp
include/gam/links_implementations/: fl_common.hpp  fl_connectionless.hpp
tests/: CMakeLists.txt  Makefile  dff2_bb_farm.cpp  dff2_bb_ofarm.cpp  dff2_bb_pipeline.cpp  mtu.h  mtu_main.cpp  mtu_ranks.cpp  non_trivially_copyable.cpp  non_trivially_copyable_pingpong.cpp  non_trivially_copyable_public.cpp  pingpong.cpp  simple_private.cpp  simple_public.cpp  simple_publish.cpp  unique_local_public.cpp
